--- a/package.json
+++ b/package.json
@@ -6,21 +6,39 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@typechain/truffle-v5": "^8.0.0",
+    "@types/bn.js": "^5.1.0",
+    "@types/chai": "^4.3.0",
     "@types/jest": "^27.4.1",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/web3": "^1.2.2",
+    "bootstrap": "^5.1.3",
+    "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^3.0.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
+    "solc": "^0.8.13",
+    "truffle-typings": "^1.0.8",
+    "ts-node": "^10.7.0",
+    "typechain": "^8.0.0",
     "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-types": "typechain --target=truffle-v5 './build/contracts/*.json'",
+    "postinstall": "truffle compile && yarn generate-types",
+    "migrate": "tsc -p ./tsconfig.migrate.json --outDir migrations && truffle migrate"
   },
   "eslintConfig": {
     "extends": [
