--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@typechain/truffle-v5": "^8.0.0",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/jest": "^27.4.1",
     "@types/mocha": "^9.1.0",
     "@types/node": "^16.11.26",
@@ -38,7 +39,8 @@
     "eject": "react-scripts eject",
     "generate-types": "typechain --target=truffle-v5 './build/contracts/*.json'",
     "postinstall": "truffle compile && npm run generate-types",
-    "migrate": "tsc -p ./tsconfig.migrate.json --outDir ./migrations && truffle migrate --reset"
+    "migrate": "tsc -p ./tsconfig.migrate.json --outDir ./migrations && truffle migrate --reset",
+    "contracts-test": "env TS_NODE_PROJECT=\"tsconfig.migrate.json\" truffle test"
   },
   "eslintConfig": {
     "extends": [
