--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,12 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "typeRoots": ["./node_modules/@types", "./types"],
+    "typeRoots": ["./node_modules/@types", "./types/truffle-contracts"],
     "types": ["@types/node", "@types/chai", "@types/mocha"],
   },
   "include": [
     "src",
+    "./types/truffle-contracts/**/*.ts",
+    "test"
   ]
 }
