--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@types/web3": "^1.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
     "bootstrap": "^5.1.3",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
@@ -41,14 +42,8 @@
     "postinstall": "truffle compile && npm run generate-types",
     "migrate": "tsc -p ./tsconfig.migrate.json --outDir ./migrations && truffle migrate --reset",
     "contracts-test": "env TS_NODE_PROJECT=\"tsconfig.migrate.json\" truffle test",
-    "prettier:base": "prettier --parser typescript --single-quote",
-    "prettier:check": "npm run prettier:base -- --list-different \"src/**/*.{ts,tsx}\"",
-    "prettier:write": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\""
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run prettier:write"
-    }
+    "lint": "eslint --ext src/**/*.ts, src/**/*.tsx --ignore-path .gitignore",
+    "lint:fix": "eslint --ext src/**/*.ts, src/**/*.tsx --ignore-path .gitignore --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -69,10 +64,16 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.18.0",
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "husky": "^7.0.4",
     "prettier": "^2.6.2",
-    "tslint": "^6.1.3",
-    "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.3.0",
     "tslint-react": "^5.0.0"
