--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "react",
     "typeRoots": ["./node_modules/@types", "./types/truffle-contracts"],
     "types": ["@types/node", "@types/chai", "@types/mocha"],
   },
