--- a/package.json
+++ b/package.json
@@ -1,81 +1,91 @@
 {
-  "name": "staking-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "@typechain/truffle-v5": "^8.0.0",
-    "@types/bn.js": "^5.1.0",
-    "@types/chai": "^4.3.0",
-    "@types/chai-as-promised": "^7.1.5",
-    "@types/jest": "^27.4.1",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
-    "@types/web3": "^1.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "bootstrap": "^5.1.3",
-    "chai": "^4.3.6",
-    "chai-as-promised": "^7.1.1",
-    "chai-bignumber": "^3.0.0",
-    "react": "^18.0.0",
-    "react-bootstrap": "^2.2.2",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
-    "solc": "^0.8.13",
-    "truffle-typings": "^1.0.8",
-    "ts-node": "^10.7.0",
-    "typechain": "^8.0.0",
-    "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4",
-    "web3": "^1.7.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "generate-types": "typechain --target=truffle-v5 './build/contracts/*.json'",
-    "postinstall": "truffle compile && npm run generate-types",
-    "migrate": "tsc -p ./tsconfig.migrate.json --outDir ./migrations && truffle migrate --reset",
-    "contracts-test": "env TS_NODE_PROJECT=\"tsconfig.migrate.json\" truffle test",
-    "lint": "eslint --ext src/**/*.ts, src/**/*.tsx --ignore-path .gitignore",
-    "lint:fix": "eslint --ext src/**/*.ts, src/**/*.tsx --ignore-path .gitignore --fix"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@typescript-eslint/parser": "^5.18.0",
-    "eslint": "^8.13.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "husky": "^7.0.4",
-    "prettier": "^2.6.2",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.3.0",
-    "tslint-react": "^5.0.0"
-  }
+	"name": "staking-app",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.16.3",
+		"@testing-library/react": "^12.1.4",
+		"@testing-library/user-event": "^13.5.0",
+		"@typechain/truffle-v5": "^8.0.0",
+		"@types/bn.js": "^5.1.0",
+		"@types/chai": "^4.3.0",
+		"@types/chai-as-promised": "^7.1.5",
+		"@types/jest": "^27.4.1",
+		"@types/mocha": "^9.1.0",
+		"@types/node": "^16.11.26",
+		"@types/react": "^17.0.43",
+		"@types/react-dom": "^17.0.14",
+		"@types/web3": "^1.2.2",
+		"@typescript-eslint/eslint-plugin": "^5.18.0",
+		"bootstrap": "^5.1.3",
+		"chai": "^4.3.6",
+		"chai-as-promised": "^7.1.1",
+		"chai-bignumber": "^3.0.0",
+		"react": "^18.0.0",
+		"react-bootstrap": "^2.2.2",
+		"react-dom": "^18.0.0",
+		"react-scripts": "5.0.0",
+		"solc": "^0.8.13",
+		"truffle-typings": "^1.0.8",
+		"ts-node": "^10.7.0",
+		"typechain": "^8.0.0",
+		"typescript": "^4.6.3",
+		"web-vitals": "^2.1.4",
+		"web3": "^1.7.1"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"generate-types": "typechain --target=truffle-v5 './build/contracts/*.json'",
+		"postinstall": "truffle compile && npm run generate-types",
+		"migrate": "tsc -p ./tsconfig.migrate.json --outDir ./migrations && truffle migrate --reset",
+		"contracts-test": "env TS_NODE_PROJECT=\"tsconfig.migrate.json\" truffle test",
+		"lint": "eslint --fix './src/**/*.{ts,tsx}'",
+		"lint:fix": "eslint --fix './src/**/*.{ts,tsx}'",
+		"prettier": "prettier --write './src/**/*.{ts,tsx}'",
+		"prepare": "husky install"
+	},
+	"lint-staged": {
+		"./src/**/*.{ts,tsx}": [
+			"npx prettier --write",
+			"npx eslint --fix"
+		]
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@typescript-eslint/parser": "^5.18.0",
+		"eslint": "^8.13.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-airbnb-typescript": "^17.0.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-react": "^7.29.4",
+		"eslint-plugin-react-hooks": "^4.4.0",
+		"husky": "^7.0.0",
+		"lint-staged": "^12.3.7",
+		"prettier": "^2.6.2",
+		"tslint-config-prettier": "^1.18.0",
+		"tslint-plugin-prettier": "^2.3.0",
+		"tslint-react": "^5.0.0"
+	}
 }
