--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,22 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react",
-    "typeRoots": ["./node_modules/@types", "./types/truffle-contracts"],
-    "types": ["@types/node", "@types/chai", "@types/mocha"],
-  },
-  "include": [
-    "src",
-    "./types/truffle-contracts/**/*.ts",
-    "test"
-  ]
+	"compilerOptions": {
+		"target": "es5",
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"allowJs": true,
+		"skipLibCheck": true,
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"noFallthroughCasesInSwitch": true,
+		"module": "esnext",
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"noEmit": true,
+		"jsx": "react",
+		"typeRoots": ["./node_modules/@types", "./types/truffle-contracts"],
+		"types": ["@types/node", "@types/chai", "@types/mocha"]
+	},
+	"include": ["src", "./types/truffle-contracts/**/*.ts", "test"]
 }
