--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
 		"typechain": "^8.0.0",
 		"typescript": "^4.6.3",
 		"web-vitals": "^2.1.4",
-		"web3": "^1.7.1"
+		"web3": "^1.7.3"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "react-app-rewired start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
@@ -73,6 +73,8 @@
 	},
 	"devDependencies": {
 		"@typescript-eslint/parser": "^5.18.0",
+		"assert": "^2.0.0",
+		"crypto-browserify": "^3.12.0",
 		"eslint": "^8.13.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^17.0.0",
@@ -81,11 +83,17 @@
 		"eslint-plugin-jsx-a11y": "^6.5.1",
 		"eslint-plugin-react": "^7.29.4",
 		"eslint-plugin-react-hooks": "^4.4.0",
+		"https-browserify": "^1.0.0",
 		"husky": "^7.0.0",
 		"lint-staged": "^12.3.7",
+		"os-browserify": "^0.3.0",
 		"prettier": "^2.6.2",
+		"react-app-rewired": "^2.2.1",
+		"stream-browserify": "^3.0.0",
+		"stream-http": "^3.2.0",
 		"tslint-config-prettier": "^1.18.0",
 		"tslint-plugin-prettier": "^2.3.0",
-		"tslint-react": "^5.0.0"
+		"tslint-react": "^5.0.0",
+		"url": "^0.11.0"
 	}
 }
