--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
 		"chai": "^4.3.6",
 		"chai-as-promised": "^7.1.1",
 		"chai-bignumber": "^3.0.0",
+		"moment": "^2.29.2",
 		"react": "^18.0.0",
 		"react-bootstrap": "^2.2.2",
 		"react-dom": "^18.0.0",
+		"react-moment": "^1.1.2",
 		"react-scripts": "5.0.0",
 		"solc": "^0.8.13",
 		"truffle-typings": "^1.0.8",
